--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.726.1",
+    "@aws-sdk/s3-request-presigner": "^3.726.1",
+    "@keyv/redis": "^4.2.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -30,8 +33,11 @@
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "@supabase/supabase-js": "^2.47.10",
+    "@types/multer": "^1.4.12",
+    "cacheable": "^1.8.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "keyv": "^5.2.3",
     "nestjs-supabase-auth-v2": "^0.0.2",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
