--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.726.1",
     "@aws-sdk/s3-request-presigner": "^3.726.1",
+    "@google/genai": "^1.3.0",
     "@keyv/redis": "^4.2.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -38,6 +40,7 @@
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "@payos/node": "^1.0.10",
+    "@qdrant/js-client-rest": "^1.14.1",
     "@supabase/supabase-js": "^2.47.10",
     "@types/multer": "^1.4.12",
     "cacheable": "^1.8.7",
@@ -51,7 +54,8 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
